force-app/main/default/objects/Car_Trim__c/Car_Trim__c.object-meta.xml
<CustomObject>
    <label>Car Trim</label>
    <nameField>
        <label>Car Trim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Trims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>