force-app/main/default/objects/Car_Trim__c/fields/Electric_windows__c.field-meta.xml
<CustomField>
    <fullName>Electric_windows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electric windows</label>
    <type>Checkbox</type>
</CustomField>