force-app/main/default/objects/Car_Trim__c/fields/Heated_Seats__c.field-meta.xml
<CustomField>
    <fullName>Heated_Seats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heated Seats</label>
    <type>Checkbox</type>
</CustomField>