force-app/main/default/objects/Car_Trim__c/fields/Parking_sensors__c.field-meta.xml
<CustomField>
    <fullName>Parking_sensors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parking sensors</label>
    <type>Checkbox</type>
</CustomField>