force-app/main/default/objects/Car_Trim__c/fields/The_Color_of_the_Upholstery__c.field-meta.xml
<CustomField>
    <fullName>The_Color_of_the_Upholstery__c</fullName>
    <label>The Color of the Upholstery</label>
    <length>15</length>
    <type>Text</type>
</CustomField>