force-app/main/default/objects/Car_Trim__c/fields/Upholstery__c.field-meta.xml
<CustomField>
    <fullName>Upholstery__c</fullName>
    <label>Upholstery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faux Leather</fullName>
            </value>
            <value>
                <fullName>Leather</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Polyester</fullName>
            </value>
            <value>
                <fullName>Nylon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>